--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,30 @@
 {
-  "name": "server",
+  "name": "hotel-dhanlakshmi-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Backend API for Hotel Dhanlakshmi - Maharashtrian Restaurant",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["restaurant", "food", "api", "maharashtrian"],
+  "author": "Hotel Dhanlakshmi",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "dotenv": "^17.2.3"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0",
+    "uuid": "^9.0.1",
+    "joi": "^17.11.0",
+    "node-cron": "^3.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
