whatsapp api integration for OTP generation system

--- a/server/package.json
+++ b/server/package.json
@@ -8,21 +8,27 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["restaurant", "food", "api", "maharashtrian"],
+  "keywords": [
+    "restaurant",
+    "food",
+    "api",
+    "maharashtrian"
+  ],
   "author": "Hotel Dhanlakshmi",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.13.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
-    "uuid": "^9.0.1",
     "joi": "^17.11.0",
-    "node-cron": "^3.0.3"
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "node-cron": "^3.0.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
