--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "helmet": "^7.1.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.19.2",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
     "uuid": "^9.0.1"
