final commit to products CRUD operations - succesfully implemented CRUD operations from admin panel perform operations on mongodb

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ TROUBLESHOOTING.md
 client/.env
 ADMIN_PROFESSIONAL_UPDATE.md
 image_URLS.md
+MONGODB_MIGRATION_COMPLETE.md
+ADMIN_CRUD_GUIDE.md
+CATEGORIES_IMPLEMENTATION.md
+POPULATE_DATABASE.md
