created admin specific number and mongo otp model

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,8 @@ ADMIN_CRUD_GUIDE.md
 CATEGORIES_IMPLEMENTATION.md
 POPULATE_DATABASE.md
 ADMIN_ROUTING_FIX.md
+ADMIN_MONGODB_SETUP.md
+QUICK_START_ADMIN.md
+CHANGES_SUMMARY.md
+ADMIN_QUICK_REFERENCE.md
+server/scripts/createAdmin.js
