amdin panel orders tab - order status issue fixed

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ QUICK_START_ADMIN.md
 CHANGES_SUMMARY.md
 ADMIN_QUICK_REFERENCE.md
 server/scripts/createAdmin.js
+FIXES_SUMMARY.md
+ORDER_STATUS_UPDATE_FIX.md
