Razorpay setup complete - API keys remaining

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ ADMIN_QUICK_REFERENCE.md
 server/scripts/createAdmin.js
 FIXES_SUMMARY.md
 ORDER_STATUS_UPDATE_FIX.md
+GUEST_CHECKOUT_RAZORPAY_SETUP.md
+CHECKOUT_FLOW_SUMMARY.md
