--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "mongoose": "^8.19.2",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
+    "razorpay": "^2.9.6",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
