--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ ORDER_STATUS_UPDATE_FIX.md
 GUEST_CHECKOUT_RAZORPAY_SETUP.md
 CHECKOUT_FLOW_SUMMARY.md
 client/.env.example
+ADMIN_PASSWORD_LOGIN.md
