removed the localhost urls from files - moved to .env

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ IMPLEMENTATION_COMPLETE.md
 SETUP_GUIDE.md
 TEST_FLOW.md
 TROUBLESHOOTING.md
-client/.env
+# client/.env
 ADMIN_PROFESSIONAL_UPDATE.md
 image_URLS.md
 MONGODB_MIGRATION_COMPLETE.md
@@ -22,3 +22,5 @@ GUEST_CHECKOUT_RAZORPAY_SETUP.md
 CHECKOUT_FLOW_SUMMARY.md
 client/.env.example
 ADMIN_PASSWORD_LOGIN.md
+server/.env
+client/.env
