production ready changes

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@ ADMIN_PASSWORD_LOGIN.md
 DEPLOYMENT_GUIDE.md
 server/.env
 client/.env
+PRODUCTION_READY_CHECKLIST.md
+REMOVE_CONSOLE_LOGS.md
+SECURITY_AUDIT_COMPLETE.md
+server/.env.example
