--- a/client/.gitignore
+++ b/client/.gitignore
@@ -12,6 +12,12 @@ dist
 dist-ssr
 *.local
 
+# Environment variables
+.env
+.env.local
+.env.production
+.env.development
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -22,5 +28,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-
-node_modules
