--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,3 +1,15 @@
 node_modules
-# .env
-.env.example
+
+# Environment variables
+.env
+.env.local
+.env.production
+.env.development
+
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# Data files (if any)
+data/*.json
