feature : showing trending sellling  product per day , design changes on menu and home page

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ PRODUCTION_READY_CHECKLIST.md
 REMOVE_CONSOLE_LOGS.md
 SECURITY_AUDIT_COMPLETE.md
 server/.env.example
+FINAL_DEPLOYMENT_SUMMARY.md
