--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,8 @@
   "description": "Backend API for Hotel Dhanlakshmi - Maharashtrian Restaurant",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
-    "dev": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "node server.js",
     "create-admin": "node scripts/createAdmin.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
