--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^1.13.1",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -27,10 +28,11 @@
     "helmet": "^7.1.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.2",
+    "mongoose": "^8.19.4",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
     "razorpay": "^2.9.6",
+    "swiper": "^12.0.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
